# bamm

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
sdk/: Cargo.toml
sdk/src/: lib.rs
src/: error.rs  instructions.rs  lib.rs  state.rs
