[package]
name = "bamm"
version = "0.1.0"
edition = "2021"

[lib]
name = "jito_bamm"
crate-type = ["cdylib"]

[dependencies]
pinocchio = { version = "0.10.1", features = ["cpi"] }
pinocchio-log = "0.5.1"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"
solana-program-error = "3.0.0"
solana-program-log = "1.1.0"
wincode = { version = "0.2.5", features = ["derive"] }

[dev-dependencies]
mollusk-svm = "0.10.0"
solana-sdk = "3.0.0"
